# log-cpp

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  vcpkg.json
cmake/: Config.cmake.in
inc/: w_log_cpp.h
inc/spdlog/details/: sqlite_helper.h
inc/spdlog/sinks/: sqlite_sink.h
src/: CMakeLists.txt  w_log_cpp.cpp
src/details/: read_write_mutex.h  single_async_logger.cpp  single_async_logger.h  singleton.h  sqlite_helper.cpp
test/: CMakeLists.txt  main.cpp
